# spatial_programing

./: .gitignore  1_coordinate_system.ipynb  1_corrdinate_system.ipynb  2_camara.ipynb  2_extra_camera.ipynb  README.md  pyproject.toml
data/: camera.gltf  camera.ply
data/camera_for_unity/: camera.gltf.obj.mtl
scripts/: create_camera_obj.py
util_lib/: camera.py  projection.py  transformable_object.py  types.py  visualization.py  world.py
